--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -554,7 +554,7 @@ app_ui <- function() {
       )
     ), 
     fluidRow(
-      # Setting the second tab to be of type point
+      # Setting the second tab to be of type hist
       id = "geom_hist", 
       mod_dataviz_ui(
         "dataviz_ui_2", 
