feat: grouped options

--- a/index.Rmd
+++ b/index.Rmd
@@ -34,27 +34,11 @@ options(
   formatR.indent = 2,
   digits = 4,
   conflicts.policy = FALSE,
-  dplyr.summarise.inform = FALSE
+  dplyr.summarise.inform = FALSE,
+  usethis.allow_nested_project = TRUE,
+  tibble.width = 55,
+  width = 55
 )
-
-options(tibble.width = 55)
-options(width = 55)
-# library(knitr)
-# hook_output = knit_hooks$get('output')  #this is the output for code
-#
-# knit_hooks$set(output = function(x, options) {
-#   # use if the output is PDF and you set an option linewidth to e.g. 70
-#   # in the chunk options
-#   n <- 72
-#   if (knitr::is_latex_output()) {
-#     if (nchar(x) > 72){
-#       x <- gsub("\n", "", x)
-#       x <- gsub("(.{72})", "\\1\n", x)
-#     }
-#   }
-#   hook_output(x, options)
-# })
-
 ```
 
 # Introduction {-}
