feat: rm the scrit

--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -943,6 +943,10 @@ If you decide to update a package in your project, and realize that this package
 There are more things you can do with `{renv}`.
 If you want to know more, we invite you to refer to the [official documentation](https://rstudio.github.io/renv).
 
+```{r 11-step-by-step-secure-49-bis include = FALSE}
+unlink("script.R")
+```
+
 ### Docker
 
 #### A. R, Docker, `{shiny}` {.unnumbered}
